<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/r_visions_du_jour"
        android:textColor="@color/pinkM"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/votre_progression"
        android:textColor="@color/pinkM"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Cours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vous_avez_de_nouveaux_cours"
        android:textColor="@color/pinkM"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listRevision" />

    <Button
        android:id="@+id/ajoutcours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/ajoutez_les"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/Cours"
        app:layout_constraintTop_toBottomOf="@+id/listRevision" />

    <ListView
        android:id="@+id/listRevision"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:background="@color/clair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="8dp"
        android:progress="40"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:indeterminateOnly="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog" />

    <TextView
        android:id="@+id/niv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/_100"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/niv"
        app:layout_constraintStart_toStartOf="@+id/niv"
        app:layout_constraintTop_toBottomOf="@+id/niv">

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sep"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tNiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100e"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/xp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/xp"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/niveau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Niveau"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/niv"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>